@@ -242,7 +242,7 @@ class RendererAgg(RendererBase):
         if ismath=='TeX':
             # todo: handle props
             size = prop.get_size_in_points()
-            Z = self.texmanager.get_rgba(s, size, rgb)
+            Z = self.texmanager.get_rgba(s, size, self.dpi.get(), rgb)
             m,n,tmp = Z.shape
             return n,m
 
@@ -261,17 +261,18 @@ class RendererAgg(RendererBase):
         # todo, handle props, angle, origins
         rgb = gc.get_rgb()
         size = prop.get_size_in_points()
-
+        dpi = self.dpi.get()
+        
         flip = angle==90
         w,h = self.get_text_width_height(s, prop, 'TeX', rgb)
         if flip:
             w,h = h,w
             x -= w
 
-        key = s, size, rgb, angle, self.texmanager.get_font_config()
+        key = s, size, dpi, rgb, angle, self.texmanager.get_font_config()
         im = self.texd.get(key)
         if im is None:
-            Z = self.texmanager.get_rgba(s, size, rgb)
+            Z = self.texmanager.get_rgba(s, size, dpi, rgb)
             if flip:
                 r = Z[:,:,0]
                 g = Z[:,:,1]
